--- a/tests/tests.amiliur.annotations/tests.amiliur.annotations.csproj
+++ b/tests/tests.amiliur.annotations/tests.amiliur.annotations.csproj
@@ -20,5 +20,9 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\amiliur.annotations\amiliur.annotations.csproj" />
+  </ItemGroup>
  
 </Project>
