--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,6 +19,14 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
+    - name: Nerdbank.GitVersioning
+      uses: dotnet/nbgv@master
+      id: nbgv
+      with:
+        setAllVars: true
+    - run:
+        echo 'SemVer2=${{ steps.nbgv.outputs.SemVer2 }}'
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
