--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,9 +5,9 @@ name: .NET
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "develop" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "develop" ]
 
 jobs:
   build:
@@ -15,7 +15,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+    - name: Nerdbank.GitVersioning
+      uses: dotnet/nbgv@master
+      id: nbgv
+      with:
+        setAllVars: true
+    - run:
+        echo 'SemVer2=${{ steps.nbgv.outputs.SemVer2 }}'
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
