--- a/.github/workflows/publish-to-nuget.yml
+++ b/.github/workflows/publish-to-nuget.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - 'release/*'
+      - 'main'
 
 jobs:
   publish:
@@ -32,14 +33,8 @@ jobs:
         echo 'SemVer2=${{ steps.nbgv.outputs.SemVer2 }}'
 
     - name: Build
-      run: dotnet build --no-restore
-      
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
-
-    - name: Build
       run: dotnet build --configuration Release --no-restore
     
-    - name: Publish to NuGet
-      run: dotnet nuget push **/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+    - name: Publish amiliur.annotations to NuGet
+      run: dotnet nuget push **/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
       working-directory: './src/amiliur.annotations/'
