--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -6,4 +6,9 @@
       <Version>3.5.119</Version>
     </PackageReference>
   </ItemGroup>
+  
+  <PropertyGroup>
+    <ThisAssemblyVersion>0.0.0</ThisAssemblyVersion>
+    <LocalEnvironment Condition="'$(LocalEnvironment)' == ''">$(LOCAL_ENVIRONMENT_REFERENCE_PROJECTS)</LocalEnvironment>
+  </PropertyGroup>
 </Project>
