--- a/src/amiliur.annotations/amiliur.annotations.csproj
+++ b/src/amiliur.annotations/amiliur.annotations.csproj
@@ -30,4 +30,8 @@
       </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Update="Nerdbank.GitVersioning" Version="3.6.128" />
+    </ItemGroup>
+
 </Project>
